@@ -4,6 +4,10 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- PortalType-criteria should use archetype_name as value when querying for the
+  Type-index. Fixes https://dev.plone.org/plone/ticket/11913
+  [WouterVH]
+
 - NonRefCatalogContent-objects, e.g. criteria, should not obtain a UUID.
   Fixes https://dev.plone.org/plone/ticket/11904
   [WouterVH]
